maj bouton next 2

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,7 +78,7 @@ h1{
     color: #FDCB46;
     margin: 1em 0 4em;
     font-size: 55px;
-    border-radius: 0.4em;
+    border-radius: 0.4emgi;
     font-family: 'Poppins', sans-serif;
     border: 0;
     padding: 15px 1em 15px 1em;
