--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,8 +18,8 @@ body{
 
 .entete{
     margin: auto;
-    width: 565px;
-    padding: 77px;
+    width: 35%;
+    padding: 5%;
     text-align: center;;
 }
 
@@ -76,12 +76,12 @@ h1{
     text-align: center;
     background-color: #579C87;
     color: #FDCB46;
-    margin: 1em 0 4em;
+    margin: 0 0 10%;
     font-size: 55px;
-    border-radius: 0.4em;
+    border-radius: 20px;
     font-family: 'Poppins', sans-serif;
     border: 0;
-    padding: 15px 1em 15px 1em;
+    padding: 1% 3% 1% 3%;
 }
 
 #bouton{
@@ -147,8 +147,8 @@ a{
 #menu_lne{
     background-color: #ffebee;
     text-align: center;
-    margin-right: 29em;
-    margin-left: 29em;
+    margin-right: 21%;
+    margin-left: 21%;
     margin-bottom: 13em;
     font-family: "segoeprint";
     box-shadow: 1px 1px 19px #b7b6b6;
@@ -251,8 +251,8 @@ a{
 #menu_lcf{
     font-family: "notoserif";
     text-align: center;
-    margin-right: 29em;
-    margin-left: 29em;
+    margin-right: 21%;
+    margin-left: 21%;
     margin-bottom: 13em;
     box-shadow: 1px 1px 19px #b7b6b6;
     background-color: #FFF5FE;
@@ -328,8 +328,8 @@ a{
 #menu_ldp{
     font-family: "segoeprint";
     text-align: center;
-    margin-right: 29em;
-    margin-left: 29em;
+    margin-right: 21%;
+    margin-left: 21%;
     margin-bottom: 13em;
     box-shadow: 1px 1px 19px #b7b6b6;
     background-color: #EDEFEF;
@@ -393,8 +393,8 @@ a{
 #menu_lpg{
     font-family: "segoeprint";
     text-align: center;
-    margin-right: 29em;
-    margin-left: 29em;
+    margin-right: 21%;
+    margin-left: 21%;
     margin-bottom: 13em;
     box-shadow: 1px 1px 19px #b7b6b6;
     background-color: #EDEFEF;
@@ -485,8 +485,8 @@ a{
 
 .menu{
     box-shadow: 1px 1px 19px #b7b6b6;
-    margin: 4em;
-    max-width: 600px;
+    margin: 4%;
+    max-width: 30%;
     overflow: hidden;
 }
 .menu img{
@@ -655,4 +655,69 @@ a{
 
 #next:hover .point3{
     animation: point3animation 2s ease-in-out infinite;
+}
+
+/**Responsive design*/
+
+@media screen and (max-width: 1280px)
+{
+    #menu_lne, #menu_ldp, #menu_lpg, #menu_lcf{
+        margin-right: 9%;
+        margin-left: 9%;
+    }
+}
+
+@media screen all and (min width: 900px) and (max-width: 1280px)
+{
+    #content{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #top, #bottom{
+        display: flex;
+        flex-direction: column
+    }
+
+    #menu_lne, #menu_ldp, #menu_lpg, #menu_lcf{
+        margin-right: 9%;
+        margin-left: 9%;
+    }
+}
+
+@media screen all and (min width: 768px) and (max-width: 900px)
+{
+    #content{
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    #top, #bottom{
+        display: flex;
+        flex-direction: column
+    }
+
+    #menu_lne #menu_ldp #menu_lpg #menu_lcf{
+        margin-right: 9%;
+        margin-left: 9%;
+    }
+}
+
+@media screen all and (min width: 480px) and (max-width: 768px)
+{
+    #content{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #top, #bottom{
+        display: flex;
+        flex-direction: column
+    }
+
+    #menu_lne #menu_ldp #menu_lpg #menu_lcf{
+        margin-right: 9%;
+        margin-left: 9%;
+    }
 }
