--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -682,6 +682,7 @@ a{
     #menu_lne, #menu_ldp, #menu_lpg, #menu_lcf{
         margin-right: 9%;
         margin-left: 9%;
+        padding: 0;
     }
 }
 
@@ -701,6 +702,7 @@ a{
     #menu_lne #menu_ldp #menu_lpg #menu_lcf{
         margin-right: 9%;
         margin-left: 9%;
+        padding: 0;
     }
 }
 
@@ -719,5 +721,6 @@ a{
     #menu_lne #menu_ldp #menu_lpg #menu_lcf{
         margin-right: 9%;
         margin-left: 9%;
+        padding: 0;
     }
 }
