--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -668,7 +668,7 @@ a{
 
 }
 
-@media screen all and (min width: 900px) and (max-width: 1280px)
+@media screen and (min-width: 900px) and (max-width: 1280px)
 {
     #content{
         display: flex;
@@ -687,11 +687,20 @@ a{
     }
 
     #next, #foot{
-        font-size: 1em; 
+        font-size: 28px;
+        margin: 0 0 15%; 
+    }
+    #next{
+        font-size: 28px;
+        margin: 0 0 15%; 
+    }
+
+    #foot{
+        font-size: 19px;
     }
 }
 
-@media screen all and (min width: 768px) and (max-width: 900px)
+@media screen and (min-width: 768px) and (max-width: 900px)
 {
     #content{
         display: flex;
@@ -711,11 +720,20 @@ a{
     }
 
     #next, #foot{
-        font-size: 1em; 
+        font-size: 28px;
+        margin: 0 0 15%; 
+    }
+    #next{
+        font-size: 28px;
+        margin: 0 0 15%; 
+    }
+
+    #foot{
+        font-size: 19px;
     }
 }
 
-@media screen all and (min width: 480px) and (max-width: 768px)
+@media screen and (min-width: 480px) and (max-width: 768px)
 {
     #content{
         display: flex;
@@ -733,7 +751,12 @@ a{
         padding: 0;
     }
 
-    #next, #foot{
-        font-size: 1em; 
+    #next{
+        font-size: 28px;
+        margin: 0 0 15%; 
+    }
+
+    #foot{
+        font-size: 19px;
     }
 }
