--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -407,7 +407,6 @@ a{
     font-size: 75px;
     font-family: "kaushanscript";
     background: linear-gradient(to right,#43973D, #72BF56,#BEFF7F);
-    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 } 
@@ -670,16 +669,6 @@ a{
 
 @media screen and (min-width: 900px) and (max-width: 1280px)
 {
-    #content{
-        display: flex;
-        flex-direction: column;
-    }
-
-    #top, #bottom{
-        display: flex;
-        flex-direction: column
-    }
-
     #menu_lne, #menu_ldp, #menu_lpg, #menu_lcf{
         margin-right: 9%;
         margin-left: 9%;
@@ -688,41 +677,41 @@ a{
 
     
     #next{
-        font-size: 28px;
+        font-size: 38px;
         margin: 0 0 15%; 
     }
 
     #foot{
-        font-size: 19px;
+        font-size: 29px;
     }
 }
 
 @media screen and (min-width: 768px) and (max-width: 900px)
 {
-    #content{
-        display: flex;
-        flex-direction: column;
-        
-    }
-
     #top, #bottom{
         display: flex;
-        flex-direction: column
+        flex-direction: column;
+        align-items: center;
     }
 
     #menu_lne #menu_ldp #menu_lpg #menu_lcf{
         margin-right: 9%;
         margin-left: 9%;
         padding: 0;
+        max-width: 60%;
+    }
+
+    .menu{
+        max-width: 60%;
     }
 
     #next{
-        font-size: 28px;
+        font-size: 38px;
         margin: 0 0 15%; 
     }
 
     #foot{
-        font-size: 19px;
+        font-size: 25px;
     }
 }
 
@@ -731,17 +720,23 @@ a{
     #content{
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     #top, #bottom{
         display: flex;
-        flex-direction: column
+        flex-direction: column;
+        align-items: center;
     }
 
     #menu_lne #menu_ldp #menu_lpg #menu_lcf{
         margin-right: 9%;
         margin-left: 9%;
         padding: 0;
+    }
+
+    .menu{
+        max-width: 60%;
     }
 
     #next{
