maj responsive menus

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -178,12 +178,12 @@ a{
 
 #top_title{
     font-family: "devonshire";
-    font-size: 3.5vw;
+    font-size: 66px;
 }
 
 #bot_title{
     font-family: "devonshire";
-    font-size: 2.5vw;
+    font-size: 45px;
 }
 
 .lne_title{
@@ -715,7 +715,7 @@ a{
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px)
+@media screen and (min-width: 320px) and (max-width: 768px)
 {
     #content{
         display: flex;
@@ -747,4 +747,13 @@ a{
     #foot{
         font-size: 19px;
     }
+
+    #lpg_logo, #ldp_logo, #lcf_logo, #top_title{
+        font-size: 38px;
+    }
+
+    #bot_title{
+        font-size: 25px;
+    }
+
 }
